--- a/Stroop Effect.html
+++ b/Stroop Effect.html
@@ -11790,7 +11790,12 @@ Incongruent words: 26.956 seconds</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="1.-What-is-our-independent-variable?-What-is-our-dependent-variable?">1. What is our independent variable? What is our dependent variable?<a class="anchor-link" href="#1.-What-is-our-independent-variable?-What-is-our-dependent-variable?">&#182;</a></h4><p>Independent variable: whether the color that the word is respresenting and the ink color of the word match or not.<br>
 Dependent variable: Time it takes to name the ink colors in equally-sized lists.</p>
-<h4 id="2.-What-is-an-appropriate-set-of-hypotheses-for-this-task?-What-kind-of-statistical-test-do-you-expect-to-perform?-Justify-your-choices.">2. What is an appropriate set of hypotheses for this task? What kind of statistical test do you expect to perform? Justify your choices.<a class="anchor-link" href="#2.-What-is-an-appropriate-set-of-hypotheses-for-this-task?-What-kind-of-statistical-test-do-you-expect-to-perform?-Justify-your-choices.">&#182;</a></h4><p>The null hypothesis $H_{0}$ is that comparing to the congruent words condition, the incongruent words condition will not signigicantly increase the population reaction time on the task; the alternative hypothesis $H_{a}$ is that comparing to the congruent words condition, the incongruent words condition will significantly increase
+<h4 id="2.-What-is-an-appropriate-set-of-hypotheses-for-this-task?-What-kind-of-statistical-test-do-you-expect-to-perform?-Justify-your-choices.">2. What is an appropriate set of hypotheses for this task? What kind of statistical test do you expect to perform? Justify your choices.<a class="anchor-link" href="#2.-What-is-an-appropriate-set-of-hypotheses-for-this-task?-What-kind-of-statistical-test-do-you-expect-to-perform?-Justify-your-choices.">&#182;</a></h4><p>The statistical test I will conduct will be based on the following assumptions:</p>
+<ol>
+<li>The data is collected from a representative, randomly selected portion of the total population;</li>
+<li>The population distributions of both Congruent and Incongruent tasks are normal.  </li>
+</ol>
+<p>The null hypothesis $H_{0}$ is that comparing to the congruent words condition, the incongruent words condition will not signigicantly increase the population reaction time on the task; the alternative hypothesis $H_{a}$ is that comparing to the congruent words condition, the incongruent words condition will significantly increase
 the mean of the population reaction time of the task.
 $$H_{0}: \mu_{incongruent} - \mu_{congruent} \leq 0$$
 $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
