--- a/Stroop Effect.html
+++ b/Stroop Effect.html
@@ -13056,6 +13056,8 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 <li>LaTex Cheat Sheet: <a href="https://www.nyu.edu/projects/beber/files/Chang_LaTeX_sheet.pdf">https://www.nyu.edu/projects/beber/files/Chang_LaTeX_sheet.pdf</a></li>
 <li>Matplotlib Histogram: <a href="https://stackoverflow.com/questions/16180946/drawing-average-line-in-histogram-matplotlib">https://stackoverflow.com/questions/16180946/drawing-average-line-in-histogram-matplotlib</a></li>
 <li>Matplotlib Reference Line: <a href="https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.axvline.html">https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.axvline.html</a></li>
+<li>T-test Assumptions: <a href="http://influentialpoints.com/Training/paired_t-test-principles-properties-assumptions.htm">http://influentialpoints.com/Training/paired_t-test-principles-properties-assumptions.htm</a></li>
+<li>T-test Assumptions: <a href="http://www2.psychology.uiowa.edu/faculty/mordkoff/GradStats/part%201/I.07%20normal.pdf">http://www2.psychology.uiowa.edu/faculty/mordkoff/GradStats/part%201/I.07%20normal.pdf</a></li>
 </ol>
 
 </div>
