--- a/Stroop Effect.html
+++ b/Stroop Effect.html
@@ -11812,7 +11812,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[109]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">matplotlib</span> inline
@@ -11833,7 +11833,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[110]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">stroop</span><span class="o">.</span><span class="n">describe</span><span class="p">()</span>
@@ -11849,7 +11849,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[110]:</div>
+<div class="prompt output_prompt">Out[3]:</div>
 
 
 
@@ -11930,7 +11930,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[111]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Sample size</span>
@@ -11948,7 +11948,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[111]:</div>
+<div class="prompt output_prompt">Out[4]:</div>
 
 
 
@@ -11965,7 +11965,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[112]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Mean response time of Congruent task</span>
@@ -11983,7 +11983,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[112]:</div>
+<div class="prompt output_prompt">Out[5]:</div>
 
 
 
@@ -12000,7 +12000,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[113]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Mean response time of Incogruent task</span>
@@ -12018,7 +12018,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[113]:</div>
+<div class="prompt output_prompt">Out[6]:</div>
 
 
 
@@ -12035,7 +12035,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[114]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Mean difference of Incongruent and Congruent tasks</span>
@@ -12053,7 +12053,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[114]:</div>
+<div class="prompt output_prompt">Out[7]:</div>
 
 
 
@@ -12070,7 +12070,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[115]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Sample standard deviation of Congruent task</span>
@@ -12088,7 +12088,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[115]:</div>
+<div class="prompt output_prompt">Out[8]:</div>
 
 
 
@@ -12105,7 +12105,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[116]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Sample standard deviation of Incongruent task</span>
@@ -12123,7 +12123,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[116]:</div>
+<div class="prompt output_prompt">Out[9]:</div>
 
 
 
@@ -12149,7 +12149,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[117]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Adding the column of difference</span>
@@ -12206,7 +12206,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[118]:</div>
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Standard deviation of difference</span>
@@ -12224,7 +12224,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[118]:</div>
+<div class="prompt output_prompt">Out[11]:</div>
 
 
 
@@ -12249,7 +12249,7 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[119]:</div>
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">10</span><span class="p">,</span><span class="mi">8</span><span class="p">))</span>
@@ -12266,13 +12266,13 @@ $$H_{a}: \mu_{incongruent} - \mu_{congruent} \gt 0$$</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[119]:</div>
+<div class="prompt output_prompt">Out[12]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x1221791d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x113544160&gt;</pre>
 </div>
 
 </div>
@@ -12410,14 +12410,14 @@ eVYAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>From the box plot we can see that the mean response time of the Incongruent group is obviously larger than the mean response time of the Congruent group. Although this might because of the two outliers in the Incongruent group that skew the mean response time of the Incongruent group.</p>
+<p>From the box plot we can see that the mean response time of the Incongruent group is obviously longer than the mean response time of the Congruent group. Although this might because of the two outliers in the Incongruent group that skew the mean response time of the Incongruent group.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[120]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">10</span><span class="p">,</span><span class="mi">8</span><span class="p">))</span>
@@ -12444,13 +12444,13 @@ eVYAAAAASUVORK5CYII=
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[120]:</div>
+<div class="prompt output_prompt">Out[13]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.legend.Legend at 0x12269a470&gt;</pre>
+<pre>&lt;matplotlib.legend.Legend at 0x116f16b38&gt;</pre>
 </div>
 
 </div>
@@ -12806,7 +12806,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>From the histograms we can prove our conclusion from the box plot that the mean response time of the Incongruent group is skewed by the two outliers as the mean of the Incogruent group is larger than the group's median response time. Whereas the mean and median response time for Congruent group are almost identical.</p>
+<p>From the histograms we can prove our conclusion from the box plot that the mean response time of the Incongruent group is skewed by the two outliers as the mean response time of the Incogruent group is longer than the group's median response time. Whereas the mean and median response time for Congruent group are almost identical.</p>
 
 </div>
 </div>
@@ -12823,58 +12823,14 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>First I will get the $t_{critical}$ at $\alpha = 0.05$.</p>
+<p>First I will get the degree of freedom:</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[121]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Compute the t-critical value at alpha = 0.05</span>
-<span class="n">t_critical_alpha</span> <span class="o">=</span> <span class="n">stats</span><span class="o">.</span><span class="n">t</span><span class="o">.</span><span class="n">ppf</span><span class="p">(</span><span class="mi">1</span><span class="o">-</span><span class="mf">0.05</span><span class="p">,</span> <span class="mi">23</span><span class="p">)</span>
-<span class="n">t_critical_alpha</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area">
-
-<div class="prompt output_prompt">Out[121]:</div>
-
-
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>1.7138715277470473</pre>
-</div>
-
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Now get the Degree of Freedom</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[122]:</div>
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Degree of freedom</span>
@@ -12892,13 +12848,57 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[122]:</div>
+<div class="prompt output_prompt">Out[14]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
 <pre>23</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Now I will get the $t_{critical}$ at $\alpha = 0.05$.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Compute the t-critical value at alpha = 0.05</span>
+<span class="n">t_critical_alpha</span> <span class="o">=</span> <span class="n">stats</span><span class="o">.</span><span class="n">t</span><span class="o">.</span><span class="n">ppf</span><span class="p">(</span><span class="mi">1</span><span class="o">-</span><span class="mf">0.05</span><span class="p">,</span> <span class="n">df</span><span class="p">)</span>
+<span class="n">t_critical_alpha</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[15]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>1.7138715277470473</pre>
 </div>
 
 </div>
@@ -12918,7 +12918,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[123]:</div>
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Standard Error of the mean difference</span>
@@ -12936,7 +12936,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[123]:</div>
+<div class="prompt output_prompt">Out[16]:</div>
 
 
 
@@ -12962,7 +12962,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[124]:</div>
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># t-statistics value</span>
@@ -12980,7 +12980,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[124]:</div>
+<div class="prompt output_prompt">Out[17]:</div>
 
 
 
@@ -13006,7 +13006,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[125]:</div>
+<div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">stats</span><span class="o">.</span><span class="n">ttest_rel</span><span class="p">(</span><span class="n">stroop</span><span class="p">[</span><span class="s1">&#39;Incongruent&#39;</span><span class="p">],</span><span class="n">stroop</span><span class="p">[</span><span class="s1">&#39;Congruent&#39;</span><span class="p">])</span>
@@ -13022,7 +13022,7 @@ hAL9D5UT2cbxVGqdAAAAAElFTkSuQmCC
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[125]:</div>
+<div class="prompt output_prompt">Out[18]:</div>
 
 
 
